deployment/rook-ceph/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rook-ceph-mgr-dashboard
    namespace: rook-ceph
    annotations:
        kubernetes.io/ingress.class: "nginx"
        kubernetes.io/tls-acme: "true"
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
        nginx.ingress.kubernetes.io/server-snippet: |
            proxy_ssl_verify off;
spec:
    tls:
    -   hosts:
        - rook-ceph.${CLUSTER_FQN}
        secretName: rook-ceph.${CLUSTER_FQN}
    rules:
    -   host: rook-ceph.${CLUSTER_FQN}
        http:
            paths:
            -   path: /
                pathType: Prefix
                backend:
                    service:
                        name: rook-ceph-mgr-dashboard
                        port:
                            name: https-dashboard
